--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
-
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +45,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/styled-components": "^5.1.19"
+    "@types/styled-components": "^5.1.19",
+    "gh-pages": "^3.2.3"
   }
 }
