--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-inlinesvg": "^2.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
